# mcp-sql-guard

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: eval_cases.jsonl  policy.example.yaml
reports/: governance_report_example.md
src/mcp_sql_guard/: __init__.py  audit.py  cli.py  config.py  engine.py  evals.py  guard.py  masking.py  schema.py  server.py  validator.py
tests/: test_audit.py  test_cli.py  test_evals.py  test_guard.py  test_masking.py  test_server.py  test_validator.py
